# Renderer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme  Readme.md  cmake_install.cmake
Default/: makefile  sources.mk
Default/src/: subdir.mk
MakeConf/: inc.mk
inc/Renderer/: BaseStages.h  Buffer.h  Camera.h  Connector.h  Context.h  Crtc.h  Device.h  Drawable.h  Geom.hpp  Graphics.h  Light.h  Log.h  Model.h  PixelStages.h  Rast.h  Rasterizators.h  Stages.h  Utils.hpp  VertexStages.h
inc/Wrapper/: nouveau_drm.h
include/: Math.h
include/GraphicsUtils/: Utils.h
include/LogUtils/: Utils.h
include/Renderer/: Buffer.h  Device.h  Drawable.h  Exception.h  Geom.hpp  Graphics.h  Loader.h  Log.h  Painter.h  PrimitiveRenderer.h
include/Wrapper/: DrmWrapper.h
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
other/intel/: igt_fb.c  igt_fb.h  ioctl_wrappers.c
src/: Makefile
src/GraphicsUtils/: Utils.cpp
src/LogUtils/: Utils.cpp
src/Renderer/: BaseStages.cpp  Buffer.cpp  Camera.cpp  Connector.cpp  Context.cpp  Crtc.cpp  Device.cpp  Drawable.cpp  Exception.cpp  Geom.cpp  Graphics.cpp  Light.cpp  Loader.cpp  Log.cpp  Model.cpp  PixelStages.cpp  PrimitiveRenderer.cpp  Rast.cpp  Stages.cpp  Utils.cpp  VertexStages.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
test/example_base/: Makefile  main.cpp
test/example_doublebuf/: Makefile  main.cpp
test/example_vsync/: Makefile  main.cpp
test/test1/: Makefile  main.cpp
test/test_base/: Makefile  main.cpp
test/test_dia/: Makefile  main.cpp
test/test_doublebuf/: Makefile  main.cpp
(+20 files in other folders)
