set(needs)
set(TEMP_SRC_DIR "../${SRC_DIR}/")
set(masks cpp)
add_smth(".*\\\\." masks "$")
FILE(GLOB_RECURSE directory_files  ${TEMP_SRC_DIR} ${TEMP_SRC_DIR}* )
foreach(cur ${directory_files})
   foreach(cur_mask ${masks}) 
        if(${cur} MATCHES ${cur_mask})
            list(APPEND needs ${cur})
        endif()
    endforeach(cur_mask)
endforeach(cur)
unset(masks)
unset(TEMP_SRC_DIR)
add_library(result SHARED ${needs})
target_link_libraries(result ${gtkmm-3.0_LIBRARIES})

